--- a/generator-locales-to-sections-schema/index.html
+++ b/generator-locales-to-sections-schema/index.html
@@ -70,7 +70,7 @@
             </div>
         </div>
         <div class="text-center mt-5">
-            <p>&copy; 2024 Victoria Moura | Powered by ChatGPT</p>
+            <p>&copy; 2024 Victoria Moura | Powered by Vic with ChatGPT</p>
         </div>
     </div>
     <script src="app.js"></script>
