feat: insider test

--- a/insider/index.html
+++ b/insider/index.html
@@ -4,6 +4,8 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Insider Test</title>
+  <meta name="description"
+    content="Encontre as melhores roupas de performance e sustentáveis na Insider Store. Camisetas, calças e mais.">
   <link rel="stylesheet" href="./assets/dist/css/style.css">
   <link rel="stylesheet" href="./assets/fonts/manrope/stylesheet.css">
   <link rel="stylesheet" href="./assets/fonts/formular/stylesheet.css">
@@ -11,40 +13,45 @@
 
 <body>
   <header>
-    <h1>
-      <span class="visibility-hidden">Insider Store</span>
-      <svg width="237" height="36" viewBox="0 0 237 36" fill="none" xmlns="http://www.w3.org/2000/svg">
-        <path d="M10.5638 0H0.610229V36H10.5638V0Z" fill="black" />
-        <path d="M108.724 0H98.77V36H108.724V0Z" fill="black" />
-        <path d="M56.0951 0V23.0366H85.9588V25.9283H56.0951V36H95.9109V12.9634H66.0502V10.0717H95.9109V0H56.0951Z"
-          fill="black" />
-        <path
-          d="M154.256 0V35.841V36H194.072V25.9283H164.208V23.0366H194.072V12.9634H164.208V10.0717H194.072V0H154.256Z"
-          fill="black" />
-        <path d="M13.4215 0V36H23.3766V9.95583H43.2837V36H53.2388V0H13.4215Z" fill="black" />
-        <path
-          d="M141.444 25.9268H121.535V10.0717H141.444V25.9268ZM141.828 0H111.581V36H141.828C147.112 36 151.397 31.6655 151.397 26.3176V9.68242C151.397 4.33599 147.113 0 141.828 0Z"
-          fill="black" />
-        <path
-          d="M206.884 10.0732H226.792V12.9649H206.884V10.0732ZM236.746 13.3527V9.68093C236.746 4.33599 232.462 0 227.177 0H196.93V36H206.882V23.0351H221.814L226.357 36H236.746L231.743 21.8642C234.724 20.2237 236.746 17.0274 236.746 13.3527Z"
-          fill="black" />
-      </svg>
-    </h1>
-    <div class="js-open-cart">
-      <?xml version="1.0" ?>
-      <svg width="32px" height="32px" viewBox="0 0 12 12" enable-background="new 0 0 12 12" id="Слой_1" version="1.1"
-        xml:space="preserve" xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink">
-        <g>
-          <rect fill="#000" height="1" width="11" x="0.5" y="5.5" />
-          <rect fill="#000" height="1" width="11" x="0.5" y="2.5" />
-          <rect fill="#000" height="1" width="11" x="0.5" y="8.5" />
-        </g>
-      </svg>
+    <div class="announcement-bar">
+      <p>Ganhe um brinde em compras acima de $250</p>
+    </div>
+    <div class="header-main">
+      <picture class="logo">
+        <div class="reflexo"></div>
+        <svg width="237" height="36" viewBox="0 0 237 36" fill="none" xmlns="http://www.w3.org/2000/svg">
+          <path d="M10.5638 0H0.610229V36H10.5638V0Z" fill="black" />
+          <path d="M108.724 0H98.77V36H108.724V0Z" fill="black" />
+          <path d="M56.0951 0V23.0366H85.9588V25.9283H56.0951V36H95.9109V12.9634H66.0502V10.0717H95.9109V0H56.0951Z"
+            fill="black" />
+          <path
+            d="M154.256 0V35.841V36H194.072V25.9283H164.208V23.0366H194.072V12.9634H164.208V10.0717H194.072V0H154.256Z"
+            fill="black" />
+          <path d="M13.4215 0V36H23.3766V9.95583H43.2837V36H53.2388V0H13.4215Z" fill="black" />
+          <path
+            d="M141.444 25.9268H121.535V10.0717H141.444V25.9268ZM141.828 0H111.581V36H141.828C147.112 36 151.397 31.6655 151.397 26.3176V9.68242C151.397 4.33599 147.113 0 141.828 0Z"
+            fill="black" />
+          <path
+            d="M206.884 10.0732H226.792V12.9649H206.884V10.0732ZM236.746 13.3527V9.68093C236.746 4.33599 232.462 0 227.177 0H196.93V36H206.882V23.0351H221.814L226.357 36H236.746L231.743 21.8642C234.724 20.2237 236.746 17.0274 236.746 13.3527Z"
+            fill="black" />
+        </svg>
+      </picture>
+      <div class="open-cart js-open-cart">
+        <span class="cart-bubble js-cart-bubble">0</span>
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="32px"
+          width="32px" version="1.1" viewBox="0 0 483.1 483.1" xml:space="preserve">
+          <g>
+            <path
+              d="M434.55,418.7l-27.8-313.3c-0.5-6.2-5.7-10.9-12-10.9h-58.6c-0.1-52.1-42.5-94.5-94.6-94.5s-94.5,42.4-94.6,94.5h-58.6   c-6.2,0-11.4,4.7-12,10.9l-27.8,313.3c0,0.4,0,0.7,0,1.1c0,34.9,32.1,63.3,71.5,63.3h243c39.4,0,71.5-28.4,71.5-63.3   C434.55,419.4,434.55,419.1,434.55,418.7z M241.55,24c38.9,0,70.5,31.6,70.6,70.5h-141.2C171.05,55.6,202.65,24,241.55,24z    M363.05,459h-243c-26,0-47.2-17.3-47.5-38.8l26.8-301.7h47.6v42.1c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h141.2v42.1   c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h47.6l26.8,301.8C410.25,441.7,389.05,459,363.05,459z" />
+          </g>
+        </svg>
+      </div>
     </div>
   </header>
 
   <main class="content">
-    <collection-grid class="collection js-collection" role="article">
+    <h1 class="title">Produtos em Destaque</h1>
+    <collection-grid class="collection js-collection" role="list">
     </collection-grid>
     <div class="js-loading-products loading-products">
       <span class="loader"></span>
@@ -52,11 +59,27 @@
   </main>
 
   <cart-side class="cart js-cart" role="aside">
-    <button class="js-cart-close" type="button" aria-label="Fechar">X</button>
-    <div class="cart-content js-cart-content">
-      <h2>carrinho</h2>
-    </div>
+    <button class="cart-close js-cart-close" type="button" aria-label="Fechar">X</button>
+    <section class="cart-content js-cart-content">
+      <h2 class="subtitle">carrinho</h2>
+      <section class="cart-content__empty js-cart-empty">
+        <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" fill="#000000" height="64px"
+          width="64px" version="1.1" viewBox="0 0 483.1 483.1" xml:space="preserve">
+          <g>
+            <path
+              d="M434.55,418.7l-27.8-313.3c-0.5-6.2-5.7-10.9-12-10.9h-58.6c-0.1-52.1-42.5-94.5-94.6-94.5s-94.5,42.4-94.6,94.5h-58.6   c-6.2,0-11.4,4.7-12,10.9l-27.8,313.3c0,0.4,0,0.7,0,1.1c0,34.9,32.1,63.3,71.5,63.3h243c39.4,0,71.5-28.4,71.5-63.3   C434.55,419.4,434.55,419.1,434.55,418.7z M241.55,24c38.9,0,70.5,31.6,70.6,70.5h-141.2C171.05,55.6,202.65,24,241.55,24z    M363.05,459h-243c-26,0-47.2-17.3-47.5-38.8l26.8-301.7h47.6v42.1c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h141.2v42.1   c0,6.6,5.4,12,12,12s12-5.4,12-12v-42.1h47.6l26.8,301.8C410.25,441.7,389.05,459,363.05,459z" />
+          </g>
+        </svg>
+        <p>O seu carrinho ainda está vazio. <br />Que tal adicionar produtos?</p>
+      </section>
+      <section class="cart-content__list-items js-cart-items visibility-hidden"></section>
+      <section class="cart-content__footer js-cart-footer visibility-hidden">
+        <p class="cart-content__footer__total js-cart-total"></p>
+        <button class="js-buy-products btn js-cart-btn">finalizar compra</button>
+      </section>
+    </section>
   </cart-side>
+
   <footer>
     <p>
       <a href="https://www.insiderstore.com.br/">© Insider</a><br />
@@ -64,21 +87,21 @@
     </p>
   </footer>
 
-  <div class="modal-alert js-modal-order-success" hidden>
+  <section class="modal-alert js-modal-order-success visibility-hidden">
     <div class="modal-alert__content">
-      <h2>Compra realizada!</h2>
+      <h2 class="subtitle">Compra realizada!</h2>
       <p>Em breve enviaremos seu pedido!</p>
       <button>fechar</button>
     </div>
-  </div>
+  </section>
 
-  <div class="modal-alert js-modal-order-success" hidden>
+  <section class="modal-alert js-modal-order-success visibility-hiddens">
     <div class="modal-alert__content">
-      <h2>Ops! Algo deu errado :(</h2>
+      <h2 class="subtitle">Ops! Algo deu errado :(</h2>
       <p>Que tal revisar o carrinho e tentar novamente?!</p>
       <button>fechar</button>
     </div>
-  </div>
+  </section>
   <script src="./assets/src/js/index.js" defer></script>
 </body>
 
