--- a/insider/index.html
+++ b/insider/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
@@ -86,7 +85,7 @@
       <section class="cart-content__list-items js-cart-items visibility-hidden"></section>
       <section class="cart-content__footer js-cart-footer visibility-hidden">
         <p class="cart-content__footer__shipping"><span>Frete Fixo</span> <strong>Grátis</strong></p>
-        <p class="cart-content__footer__description">Subtotal</p>
+        <h3 class="cart-content__footer__description">Subtotal</h3>
         <p class="cart-content__footer__total js-cart-total"></p>
         <button class="btn js-cart-btn">finalizar compra</button>
       </section>
