--- a/insider/index.html
+++ b/insider/index.html
@@ -60,7 +60,7 @@
   </header>
 
   <main class="content">
-    <h1 class="title">Produtos em Destaque</h1>
+    <h1 class="title">Mês do Cliente</h1>
     <collection-grid class="collection js-collection" role="list">
     </collection-grid>
     <div class="js-loading-products loading-products">
