--- a/insider/index.html
+++ b/insider/index.html
@@ -68,7 +68,7 @@
     </div>
   </main>
 
-  <cart-side class="cart js-cart" role="dialog">
+  <aside class="cart js-cart" role="dialog">
     <button class="cart-close js-cart-close" type="button" aria-label="Fechar">X</button>
     <section class="cart-content js-cart-content">
       <h2 class="subtitle">carrinho</h2>
@@ -95,7 +95,7 @@
         </button>
       </section>
     </section>
-  </cart-side>
+  </aside>
 
   <footer>
     <p>Desenvolvido por Victoria Moura © Insider<br /> CNPJ 26.520.188/0001-92 - Insider Comércio e Confecção de Peças do Vestuário Ltda.
