--- a/insider/index.html
+++ b/insider/index.html
@@ -68,7 +68,7 @@
     </div>
   </main>
 
-  <aside class="cart js-cart" role="dialog">
+  <aside class="cart js-cart">
     <button class="cart-close js-cart-close" type="button" aria-label="Fechar">X</button>
     <section class="cart-content js-cart-content">
       <h2 class="subtitle">carrinho</h2>
