--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
       <div class="layout">
         <div class="col">
           <figure class="thumb">
-            <img src="./assets/dist/img/thumb.png" width="380px" height="380px" alt="Foto redonda de Victoria Moura: branca, cabelo castanho escuro curto, camisa preta, sorridente, com mãos cruzadas abaixo do queixo e parede de fundo amarelo">
+            <img src="./assets/dist/img/thumb.png" width="380px" height="380px" alt="Foto redonda de Victoria Moura com camisa preta e fundo amarelo">
           </figure>
         </div>
         <div class="col">
