--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
   <meta property="og:image" content="https://www.victoriamoura.com.br/assets/dist/img/share-image.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="profile" />
-  <link rel="stylesheet" href="./assets/dist/css/style.min.css">
+  <link rel="preload" href="./assets/dist/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
+  <noscript>
+      <link rel="stylesheet" href="./assets/dist/css/style.min.css">
+  </noscript>
 </head>
 
 <body>
@@ -26,7 +29,7 @@
         </div>
         <div class="col">
           <figure>
-            <img src="./assets/dist/img/logo.svg" alt="Logotipo de Victoria Moura">
+            <img src="./assets/dist/img/logo.svg" width="266px" height="75px" alt="Logotipo de Victoria Moura">
           </figure>
           <ul>
             <li>tecnologia</li>
