--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <meta property="og:image" content="https://www.victoriamoura.com.br/assets/dist/img/share-image.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="profile" />
-  <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all" defer>
+  <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all">
   <!-- <link rel="preload" href="./assets/dist/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
       <link rel="stylesheet" href="./assets/dist/css/style.min.css">
