--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   <meta property="og:image" content="https://www.victoriamoura.com.br/assets/dist/img/share-image.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="profile" />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fredoka:wght@300..700&family=Nunito:ital,wght@0,200..1000;1,200..1000&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all">
   <!-- <link rel="preload" href="./assets/dist/css/style.min.css" as="style" onload="this.onload=null;this.rel='stylesheet'">
   <noscript>
