--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="layout">
         <div class="col">
           <figure class="thumb">
-            <img src="./assets/dist/img/foto-thumb.png" width="380px" height="380px" alt="Foto redonda de Victoria Moura com camisa preta e fundo amarelo">
+            <img src="./assets/dist/img/foto-thumb.webp" width="380px" height="380px" alt="Foto redonda de Victoria Moura com camisa preta e fundo amarelo">
           </figure>
         </div>
         <div class="col">
@@ -45,7 +45,7 @@
         </div>
       </div>
       <div class="overlay"></div>
-      <img class="background-section" loading="lazy" src="./assets/dist/img/background-section.png" alt="Background" width="1440px" height="635px">
+      <img class="background-section" loading="lazy" src="./assets/dist/img/background-section.webp" alt="Background" width="1440px" height="635px">
     </section>
   </main>
 </body>
