theme color browser + favicon

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Victoria Moura | Desenvolvedora Web Front End | Shopify e Wordpress</title>
+  <meta name="theme-color" content="#EEFF90">
   <meta name="description" content="Desenvolvimento web focado em ambientes digitais com performance e experiência. E-commerces, Shopify, Wordpress e projetos digitais.">
   <meta property="og:title" content="Victoria Moura | Tech, Front End, Shopify e Wordpress" />
   <meta property="og:url" content="https://www.victoriamoura.com.br" />
@@ -12,10 +12,10 @@
   <meta property="og:image" content="https://www.victoriamoura.com.br/assets/dist/img/share-image.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="profile" />
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="./assets/fonts/fredoka/fredoka.css" rel="stylesheet">
+  <link rel="icon" type="image/x-icon" href="/assets/dist/img/favicon.ico">
+  <link rel="stylesheet" href="./assets/fonts/fredoka/fredoka.css" media="all">
   <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all">
+  <title>Victoria Moura | Desenvolvedora Web Front End | Shopify e Wordpress</title>
 </head>
 
 <body>
