--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta name="theme-color" content="#EEFF90">
-  <meta name="description" content="Desenvolvimento web focado em ambientes digitais com performance e experiência. E-commerces, Shopify, Wordpress e projetos digitais.">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="theme-color" content="#EEFF90" />
+  <meta name="description" content="Desenvolvimento web focado em ambientes digitais com performance e experiência. E-commerces, Shopify, Wordpress e projetos digitais." />
   <meta property="og:title" content="Victoria Moura | Tech, Front End, Shopify e Wordpress" />
   <meta property="og:url" content="https://www.victoriamoura.com.br" />
   <meta property="og:description" content="Desenvolvimento web focado em ambientes digitais com performance e experiência" />
   <meta property="og:image" content="https://www.victoriamoura.com.br/assets/dist/img/share-image.png" />
   <meta property="og:locale" content="pt_BR" />
   <meta property="og:type" content="profile" />
-  <link rel="icon" type="image/x-icon" href="/assets/dist/img/favicon.ico">
-  <link rel="stylesheet" href="./assets/fonts/fredoka/fredoka.css" media="all">
-  <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all">
+  <link rel="icon" type="image/x-icon" href="/assets/dist/img/favicon.ico" />
+  <link rel="stylesheet" href="./assets/fonts/fredoka/fredoka.css" media="all" />
+  <link rel="stylesheet" href="./assets/dist/css/style.min.css" media="all" />
   <title>Victoria Moura | Desenvolvedora Web Front End | Shopify e Wordpress</title>
 </head>
 
@@ -24,7 +24,7 @@
       <div class="layout">
         <div class="col">
           <figure>
-            <img src="./assets/dist/img/logo.svg" width="266px" height="75px" alt="Logotipo de Victoria Moura">
+            <img src="./assets/dist/img/logo.svg" width="266" height="75" alt="Logotipo de Victoria Moura" />
           </figure>
           <ul>
             <li>tecnologia</li>
@@ -36,12 +36,12 @@
         </div>
         <div class="col">
           <figure class="thumb">
-            <img src="./assets/dist/img/foto-thumb.webp" width="380px" height="380px" alt="Foto redonda de Victoria Moura com camisa preta e fundo amarelo">
+            <img src="./assets/dist/img/foto-thumb.webp" width="380" height="380" alt="Foto redonda de Victoria Moura com camisa preta e fundo amarelo" />
           </figure>
         </div>
       </div>
       <div class="overlay"></div>
-      <img class="background-section" loading="lazy" src="./assets/dist/img/background-section.webp" alt="Background" width="1440px" height="635px">
+      <img class="background-section" loading="lazy" src="./assets/dist/img/background-section.webp" alt="Background" width="1440" height="635" />
     </section>
   </main>
 </body>
