remove lazy loading

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
         </div>
       </div>
       <div class="overlay"></div>
-      <img class="background-section" loading="lazy" src="./assets/dist/img/background-section.webp" alt="Background" width="1440" height="635">
+      <img class="background-section" src="./assets/dist/img/background-section.webp" alt="Background" width="1440" height="635">
     </section>
   </main>
 </body>
